--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "peerDependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@visx/visx": "^2.16.0"
   }
 }
