--- a/playground/package.json
+++ b/playground/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
+    "@visx/visx": "file:../node_modules/@visx/visx",   
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "auth-component-library": "file:..", 
         "react": "file:../node_modules/react",
-        "react-dom": "file:../node_modules/react-dom",   
+        "react-dom": "file:../node_modules/react-dom",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
